--- a/Fertilizer web templete/about.html
+++ b/Fertilizer web templete/about.html
@@ -153,6 +153,14 @@
                 <input type="email" class="inp2 mar-1" name="Email" placeholder="Email Id*"><br>
                 <textarea name="subject" style="height: 100px; padding-top: 10px;" class="inp3 mar-1"
                     placeholder="Your Messagw*"></textarea><br>
+                <div class="rating">
+                    <p>Share your rating with us :</p>
+                    <i class="fa-solid fa-star star"></i>
+                    <i class="fa-solid fa-star star"></i>
+                    <i class="fa-solid fa-star star"></i>
+                    <i class="fa-solid fa-star star"></i>
+                    <i class="fa-solid fa-star star"></i>
+                </div>
                 <button class="btn">Submit</button>
             </div>
         </div><br>
