--- a/Fertilizer web templete/product.html
+++ b/Fertilizer web templete/product.html
@@ -106,7 +106,7 @@
 
     </header>
     <!-- -------section-3------ -->
-    <h1 class="center" style="background-color: #66ffa1;"><u>Our Products</u></h1>
+    <h1 class="center" style="background-color: #dfd9d9;"><u>Our Products</u></h1>
     <div class="productContainer">
         <!-- <img src="/IMAGE/bg-4.jpg" alt="Bg"> -->
         <div class=" box">
